--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1701,10 +1701,16 @@ code: |
     {'times_per_year': "Times per year"}
   ]  
 
+  VT_fee_waiver_attachment.overflow_fields["vehicles"].label = "Additional vehicles"
+  VT_fee_waiver_attachment.overflow_fields["vehicles"].overflow_trigger = 4
+  
+  VT_fee_waiver_attachment.overflow_fields["real_estate"].label = "Additional real estate"
+  VT_fee_waiver_attachment.overflow_fields["real_estate"].overflow_trigger = 2
+
   VT_fee_waiver_attachment.overflow_fields["other_assets"].label = "Additional assets"
   VT_fee_waiver_attachment.overflow_fields["other_assets"].overflow_trigger = 2
   
-  VT_fee_waiver_attachment.overflow_fields["other_reasons_why_cannot_afford"].overflow_trigger = 530
+  VT_fee_waiver_attachment.overflow_fields["other_reasons_why_cannot_afford"].overflow_trigger = 570
   VT_fee_waiver_attachment.overflow_fields["other_reasons_why_cannot_afford"].label = "Additional reasons why I cannot afford the fees"
   VT_fee_waiver_attachment.overflow_fields.gathered = True
 ---
@@ -1726,7 +1732,14 @@ attachments:
     docx template file: VT_fee_waiver_next_steps.docx
     fields:
         - "address_county": ${ trial_court.address.county }
-        - "division": ${ trial_court.division.upper() }
+        - "court_division": |
+            % if trial_court_division == "family":
+            Family          
+            % elif trial_court_division == "probate":
+            Probate         
+            % elif trial_court_division == "civil":
+            Civil       
+            % endif
         - "name": ${ trial_court }
         - "address_address": ${ trial_court.address.address }
         - "address_unit": ${ trial_court.address.unit }
